force-app/main/default/objects/Evidence__c/fields/Liver_Contents__c.field-meta.xml
<CustomField>
    <fullName>Liver_Contents__c</fullName>
    <label>Liver Contents</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>