force-app/main/default/objects/Evidence__c/fields/Liver_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Liver_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liver Finalized</label>
    <type>Checkbox</type>
</CustomField>