force-app/main/default/objects/Evidence__c/fields/Livor_Mortis__c.field-meta.xml
<CustomField>
    <fullName>Livor_Mortis__c</fullName>
    <label>Livor Mortis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>