force-app/main/default/objects/Evidence__c/fields/Livor_Mortis_Description__c.field-meta.xml
<CustomField>
    <fullName>Livor_Mortis_Description__c</fullName>
    <label>Livor Mortis Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>