force-app/main/default/objects/Evidence__c/fields/Location_of_Testicles__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Testicles__c</fullName>
    <label>Location of Testicles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>