force-app/main/default/objects/Evidence__c/fields/Location_of_the_Body__c.field-meta.xml
<CustomField>
    <fullName>Location_of_the_Body__c</fullName>
    <label>Location of the Body</label>
    <type>TextArea</type>
</CustomField>