force-app/main/default/objects/Evidence__c/fields/Lungs__c.field-meta.xml
<CustomField>
    <fullName>Lungs__c</fullName>
    <defaultValue>&quot;Palpation and serial incisions of the lung lobes reveal no masses or abnormalities. Lung pleura palpates smooth. The lung lobes appear shiny and homogenous in color. Lungs float in formalin.&quot;</defaultValue>
    <label>Lungs</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>