force-app/main/default/objects/Evidence__c/fields/Lungs_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Lungs_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lungs Finalized</label>
    <type>Checkbox</type>
</CustomField>