force-app/main/default/objects/Evidence__c/fields/Lymph_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Lymph_Nodes__c</fullName>
    <defaultValue>&quot;Palpation of peripheral lymph nodes and mesenteric lymph nodes are smooth and symmetrical. Appears subjectively appropriate in size with no overt masses or lesions.&quot;</defaultValue>
    <label>Lymph Nodes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>