force-app/main/default/objects/Evidence__c/fields/Lymph_Nodes_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Lymph_Nodes_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lymph Nodes Finalized</label>
    <type>Checkbox</type>
</CustomField>