force-app/main/default/objects/Evidence__c/fields/Mammary__c.field-meta.xml
<CustomField>
    <fullName>Mammary__c</fullName>
    <label>Mammary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mammary glands developed, consistent with previous litters. No overt masses or lesions.</fullName>
            </value>
            <value>
                <fullName>Mammary glands minimally developed. No overt masses or lesions.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>