force-app/main/default/objects/Evidence__c/fields/Mammary_Description__c.field-meta.xml
<CustomField>
    <fullName>Mammary_Description__c</fullName>
    <label>Mammary Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>