force-app/main/default/objects/Evidence__c/fields/Mammary_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Mammary_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mammary Finalized</label>
    <type>Checkbox</type>
</CustomField>