force-app/main/default/objects/Evidence__c/fields/Microchip_Number__c.field-meta.xml
<CustomField>
    <fullName>Microchip_Number__c</fullName>
    <label>Microchip Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>