force-app/main/default/objects/Evidence__c/fields/Microchip_Results__c.field-meta.xml
<CustomField>
    <fullName>Microchip_Results__c</fullName>
    <label>Microchip Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>