force-app/main/default/objects/Evidence__c/fields/Muscle__c.field-meta.xml
<CustomField>
    <fullName>Muscle__c</fullName>
    <defaultValue>&quot;Muscling is symmetrical with no over muscling or muscle atrophy.&quot;</defaultValue>
    <label>Muscle</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>