force-app/main/default/objects/Evidence__c/fields/Muscle_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Muscle_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muscle Finalized</label>
    <type>Checkbox</type>
</CustomField>