force-app/main/default/objects/Evidence__c/fields/Nails__c.field-meta.xml
<CustomField>
    <fullName>Nails__c</fullName>
    <label>Nails</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adequate Length</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Overgrown</fullName>
            </value>
            <value>
                <fullName>Embedded</fullName>
            </value>
            <value>
                <fullName>Frayed</fullName>
            </value>
            <value>
                <fullName>Avulsed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>