force-app/main/default/objects/Evidence__c/fields/Nails_Notes__c.field-meta.xml
<CustomField>
    <fullName>Nails_Notes__c</fullName>
    <label>Nails Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>