force-app/main/default/objects/Evidence__c/fields/Nasal_Cavity__c.field-meta.xml
<CustomField>
    <fullName>Nasal_Cavity__c</fullName>
    <defaultValue>&quot;No overt masses, foreign material or oronasal fistulas.&quot;</defaultValue>
    <label>Nasal Cavity</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>