force-app/main/default/objects/Evidence__c/fields/Nasal_Cavity_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Nasal_Cavity_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nasal Cavity Finalized</label>
    <type>Checkbox</type>
</CustomField>