force-app/main/default/objects/Evidence__c/fields/Necropsy_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Necropsy_Date_Time__c</fullName>
    <label>Necropsy Date/Time</label>
    <type>DateTime</type>
</CustomField>