force-app/main/default/objects/Evidence__c/fields/Obtained_Radiographs__c.field-meta.xml
<CustomField>
    <fullName>Obtained_Radiographs__c</fullName>
    <label>Obtained Radiographs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forensics_Staff</valueSetName>
    </valueSet>
</CustomField>