force-app/main/default/objects/Evidence__c/fields/Oral_Cavity__c.field-meta.xml
<CustomField>
    <fullName>Oral_Cavity__c</fullName>
    <defaultValue>&quot;No lesions, overt masses, inflammation or periodontitis evident. The tongue palpates smooth and symmetrical.&quot;</defaultValue>
    <inlineHelpText>Teeth, gums, hard palate, and soft palate</inlineHelpText>
    <label>Oral Cavity</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>