force-app/main/default/objects/Evidence__c/fields/Oral_Cavity_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Oral_Cavity_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oral Cavity Finalized</label>
    <type>Checkbox</type>
</CustomField>