force-app/main/default/objects/Evidence__c/fields/Ovaries__c.field-meta.xml
<CustomField>
    <fullName>Ovaries__c</fullName>
    <defaultValue>&quot;Appears subjectively appropriate in size with no overt masses or lesions. Ovaries are symmetrical, ovoid and flattened in shape. Bilateral ovaries are encased in fat.&quot;</defaultValue>
    <inlineHelpText>Not applicable if altered/unknown</inlineHelpText>
    <label>Ovaries</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>