force-app/main/default/objects/Evidence__c/fields/Ovaries_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Ovaries_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ovaries Finalized</label>
    <type>Checkbox</type>
</CustomField>