force-app/main/default/objects/Evidence__c/fields/Overall_Post_Mortem_Condition__c.field-meta.xml
<CustomField>
    <fullName>Overall_Post_Mortem_Condition__c</fullName>
    <inlineHelpText>Skin slippage, hair loss, etc</inlineHelpText>
    <label>Overall Post-Mortem Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>