force-app/main/default/objects/Evidence__c/fields/Overall_Post_Mortem_Description__c.field-meta.xml
<CustomField>
    <fullName>Overall_Post_Mortem_Description__c</fullName>
    <label>Overall Post-Mortem Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>