force-app/main/default/objects/Evidence__c/fields/Pancreas__c.field-meta.xml
<CustomField>
    <fullName>Pancreas__c</fullName>
    <defaultValue>&apos;Serosal surface is shiny. Lobulated and homogeneously pink-to-gray in color. Appears subjectively appropriate in size with no overt masses or lesions.&apos;</defaultValue>
    <label>Pancreas</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>