force-app/main/default/objects/Evidence__c/fields/Pancreas_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Pancreas_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pancreas Finalized</label>
    <type>Checkbox</type>
</CustomField>