force-app/main/default/objects/Evidence__c/fields/Parathyroid_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Parathyroid_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parathyroid Finalized</label>
    <type>Checkbox</type>
</CustomField>