force-app/main/default/objects/Evidence__c/fields/Penis__c.field-meta.xml
<CustomField>
    <fullName>Penis__c</fullName>
    <defaultValue>&quot;Appears subjectively appropriate in size with no overt masses or lesions.&quot;</defaultValue>
    <label>Penis</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>