force-app/main/default/objects/Evidence__c/fields/Penis_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Penis_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Penis Finalized</label>
    <type>Checkbox</type>
</CustomField>