force-app/main/default/objects/Evidence__c/fields/Pericardium__c.field-meta.xml
<CustomField>
    <fullName>Pericardium__c</fullName>
    <defaultValue>&quot;Small amount of translucent to straw colored pericardial fluid within the pericardial sac. Pericardial fat is present.&quot;</defaultValue>
    <label>Pericardium</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>