force-app/main/default/objects/Evidence__c/fields/Pericardium_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Pericardium_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pericardium Finalized</label>
    <type>Checkbox</type>
</CustomField>