force-app/main/default/objects/Evidence__c/fields/Peripheral_Nerves_Sciatic__c.field-meta.xml
<CustomField>
    <fullName>Peripheral_Nerves_Sciatic__c</fullName>
    <label>Peripheral Nerves (Sciatic)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>