force-app/main/default/objects/Evidence__c/fields/Photographer__c.field-meta.xml
<CustomField>
    <fullName>Photographer__c</fullName>
    <label>Photographer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alison Kennedy-Benson</fullName>
            </value>
            <value>
                <fullName>Amanda Fitch</fullName>
            </value>
            <value>
                <fullName>Elizabeth Pearlman</fullName>
            </value>
            <value>
                <fullName>Kristina Baucom</fullName>
            </value>
            <value>
                <fullName>Rachel Touroo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>