force-app/main/default/objects/Evidence__c/fields/Photographer_Other__c.field-meta.xml
<CustomField>
    <fullName>Photographer_Other__c</fullName>
    <label>Photographer - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>