force-app/main/default/objects/Evidence__c/fields/Pituitary_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Pituitary_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pituitary Finalized</label>
    <type>Checkbox</type>
</CustomField>