force-app/main/default/objects/Evidence__c/fields/Placenta_Number_of_Fetuses__c.field-meta.xml
<CustomField>
    <fullName>Placenta_Number_of_Fetuses__c</fullName>
    <label>Placenta/Number of Fetuses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>