force-app/main/default/objects/Evidence__c/fields/Post_Clipping__c.field-meta.xml
<CustomField>
    <fullName>Post_Clipping__c</fullName>
    <label>Post Clipping</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>