force-app/main/default/objects/Evidence__c/fields/Post_Reflection_of_the_Skin__c.field-meta.xml
<CustomField>
    <fullName>Post_Reflection_of_the_Skin__c</fullName>
    <label>Post Reflection of the Skin</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>