force-app/main/default/objects/Evidence__c/fields/Prepuce_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Prepuce_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepuce Finalized</label>
    <type>Checkbox</type>
</CustomField>