force-app/main/default/objects/Evidence__c/fields/Presentation_of_the_Body__c.field-meta.xml
<CustomField>
    <fullName>Presentation_of_the_Body__c</fullName>
    <label>Presentation of the Body</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>