force-app/main/default/objects/Evidence__c/fields/Primary_Agency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Agency__c</fullName>
    <formula>Case__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Agency</label>
    <type>Text</type>
</CustomField>