force-app/main/default/objects/Evidence__c/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <label>Primary Color</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Species__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bay</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Buckskin</fullName>
            </value>
            <value>
                <fullName>Buff</fullName>
            </value>
            <value>
                <fullName>Chestnut</fullName>
            </value>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>Fawn</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Palomino</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Roan</fullName>
            </value>
            <value>
                <fullName>Seal</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Tan</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>