force-app/main/default/objects/Evidence__c/fields/Prosector__c.field-meta.xml
<CustomField>
    <fullName>Prosector__c</fullName>
    <label>Prosector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>