force-app/main/default/objects/Evidence__c/fields/Prostate__c.field-meta.xml
<CustomField>
    <fullName>Prostate__c</fullName>
    <defaultValue>&quot;Smooth and symmetrical with no visible or palpable masses or abnormalities. Appears subjectively appropriate in size.&quot;</defaultValue>
    <label>Prostate</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>