force-app/main/default/objects/Evidence__c/fields/Prostate_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Prostate_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prostate Finalized</label>
    <type>Checkbox</type>
</CustomField>