force-app/main/default/objects/Evidence__c/fields/Purpose_of_Necropsy__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Necropsy__c</fullName>
    <label>Purpose of Necropsy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>