force-app/main/default/objects/Evidence__c/fields/Received_Collected_By__c.field-meta.xml
<CustomField>
    <fullName>Received_Collected_By__c</fullName>
    <label>Received/Collected By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>