force-app/main/default/objects/Evidence__c/fields/Requesting_Agency__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Agency__c</fullName>
    <label>Requesting Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>