force-app/main/default/objects/Evidence__c/fields/Rigor_Mortis__c.field-meta.xml
<CustomField>
    <fullName>Rigor_Mortis__c</fullName>
    <inlineHelpText>Present in extremities, jaw</inlineHelpText>
    <label>Rigor Mortis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>