force-app/main/default/objects/Evidence__c/fields/Rigor_Mortis_Description__c.field-meta.xml
<CustomField>
    <fullName>Rigor_Mortis_Description__c</fullName>
    <label>Rigor Mortis Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>