force-app/main/default/objects/Evidence__c/fields/Scanned_for_Microchip__c.field-meta.xml
<CustomField>
    <fullName>Scanned_for_Microchip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scanned for Microchip</label>
    <type>Checkbox</type>
</CustomField>