force-app/main/default/objects/Evidence__c/fields/Scene_Location__c.field-meta.xml
<CustomField>
    <fullName>Scene_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Collected</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Case__c</field>
            <operation>equals</operation>
            <valueField>Scene_Locations__c.Case__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Scene_Locations__c</referenceTo>
    <relationshipLabel>Evidence</relationshipLabel>
    <relationshipName>Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>