force-app/main/default/objects/Evidence__c/fields/Secondary_Color__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Color__c</fullName>
    <label>Secondary Color</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Species__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Tan</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>