force-app/main/default/objects/Evidence__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male intact</fullName>
            </value>
            <value>
                <fullName>Male altered</fullName>
            </value>
            <value>
                <fullName>Male unknown</fullName>
            </value>
            <value>
                <fullName>Female altered</fullName>
            </value>
            <value>
                <fullName>Female intact</fullName>
            </value>
            <value>
                <fullName>Female unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>