force-app/main/default/objects/Evidence__c/fields/Skin__c.field-meta.xml
<CustomField>
    <fullName>Skin__c</fullName>
    <defaultValue>&quot;No parasites seen, clean and shiny hair coat.&quot;</defaultValue>
    <inlineHelpText>Hair coat, skin, pinna, feet, subcutaneous fat and subcutaneous bruising</inlineHelpText>
    <label>Skin</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>