force-app/main/default/objects/Evidence__c/fields/Skin_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Skin_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skin Finalized</label>
    <type>Checkbox</type>
</CustomField>