force-app/main/default/objects/Evidence__c/fields/Species_Other__c.field-meta.xml
<CustomField>
    <fullName>Species_Other__c</fullName>
    <label>Species - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>