force-app/main/default/objects/Evidence__c/fields/Spinal_Cord__c.field-meta.xml
<CustomField>
    <fullName>Spinal_Cord__c</fullName>
    <label>Spinal Cord</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>