force-app/main/default/objects/Evidence__c/fields/Spleen__c.field-meta.xml
<CustomField>
    <fullName>Spleen__c</fullName>
    <defaultValue>&quot;Soft and non-friable on palpation with defined edges. Appears subjectively appropriate in size with no overt masses or lesions. The organ is homogenous in color.&quot;</defaultValue>
    <label>Spleen</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>