force-app/main/default/objects/Evidence__c/fields/Spleen_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Spleen_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spleen Finalized</label>
    <type>Checkbox</type>
</CustomField>