force-app/main/default/objects/Evidence__c/fields/Stomach__c.field-meta.xml
<CustomField>
    <fullName>Stomach__c</fullName>
    <defaultValue>&apos;Gastric mucosa intact, no palpable irregularities or strictures. Serosal and mucosal surface is shiny. Appears subjectively appropriate in size with no overt masses or lesions.&apos;</defaultValue>
    <label>Stomach</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>