force-app/main/default/objects/Evidence__c/fields/Stomach_Contents__c.field-meta.xml
<CustomField>
    <fullName>Stomach_Contents__c</fullName>
    <label>Stomach Contents</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>