force-app/main/default/objects/Evidence__c/fields/Stomach_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Stomach_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stomach Finalized</label>
    <type>Checkbox</type>
</CustomField>