force-app/main/default/objects/Evidence__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <label>Storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On ice</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>