force-app/main/default/objects/Evidence__c/fields/Tattoos_Description__c.field-meta.xml
<CustomField>
    <fullName>Tattoos_Description__c</fullName>
    <label>Tattoos Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>