force-app/main/default/objects/Evidence__c/fields/Testicles__c.field-meta.xml
<CustomField>
    <fullName>Testicles__c</fullName>
    <defaultValue>&quot;Both are smooth and symmetrical with no visible or palpable masses or abnormalities. Appears subjectively appropriate in size.&quot;</defaultValue>
    <inlineHelpText>Not applicable if altered/unknown</inlineHelpText>
    <label>Testicles</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>