force-app/main/default/objects/Evidence__c/fields/Testicles_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Testicles_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testicles Finalized</label>
    <type>Checkbox</type>
</CustomField>