force-app/main/default/objects/Evidence__c/fields/Thoracic_Cavity__c.field-meta.xml
<CustomField>
    <fullName>Thoracic_Cavity__c</fullName>
    <defaultValue>&quot;No fluid within the cavity, appropriate pericardial fat deposits, pleural surface is smooth and shiny, negative air pressure is present.&quot;</defaultValue>
    <label>Thoracic Cavity</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>