force-app/main/default/objects/Evidence__c/fields/Thoracic_Cavity_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Thoracic_Cavity_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thoracic Cavity Finalized</label>
    <type>Checkbox</type>
</CustomField>