force-app/main/default/objects/Evidence__c/fields/Thymus_Description__c.field-meta.xml
<CustomField>
    <fullName>Thymus_Description__c</fullName>
    <label>Thymus Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>