force-app/main/default/objects/Evidence__c/fields/Thyroid__c.field-meta.xml
<CustomField>
    <fullName>Thyroid__c</fullName>
    <defaultValue>&quot;Two distinct lobes present with no overt organomegaly or masses. Homogeneous in color. Appears subjectively appropriate in size with no overt masses or lesions.&quot;</defaultValue>
    <label>Thyroid</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>