force-app/main/default/objects/Evidence__c/fields/Thyroid_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Thyroid_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thyroid Finalized</label>
    <type>Checkbox</type>
</CustomField>